--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,18 @@ position: relative;
 }
 
 body{
-background: #FEECA7;
+background: #A7B9FE;
 }
 
 header{
 	width: 1200px;
-	height: 150px;
+	height: 75px;
 	border-style: solid;
 	border-color: #004669;
 	border-top-right-radius: 10px;
 	border-bottom-left-radius: 10px;
-	margin-bottom: 10px; 
+	margin-bottom: 10px;
+	margin-top: 10px; 
 }
 
 h1{
@@ -91,7 +92,7 @@ a{
 
 section{
 	width: 680px;
-	height: 800px;
+	height: 1100px;
 	float:left; 
 	border-style: solid;
 	border-color: #004669;
@@ -103,7 +104,7 @@ section{
 aside{
 
 	width: 488px;
-	height: 800px;
+	height: 1100px;
 	float: left;
 	border-style: solid;
 	border-color: #004669;
@@ -114,10 +115,10 @@ aside{
 }
 
 footer{
-	width: 1300px;
-	height: 250px;	
+	width: 1200px;
+	height: 100px;
+	background: #FFC300;	
 	float: left;
-	width: 500px;
 	border-style: solid;
 	border-color: #004669;
 	border-top-right-radius: 10px;
@@ -128,4 +129,3 @@ footer{
 p{
 	padding: 10px;
 }
-
